<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_customTime"
        android:layout_alignBottom="@+id/editText_customTime"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/editText_customTime"
        android:onClick="customSetHandler"
        android:text="@string/set_it" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/button1"
        android:onClick="fastClickHandler"
        android:tag="3m"
        android:text="@string/_3mins"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/button3"
        android:onClick="fastClickHandler"
        android:tag="4m"
        android:text="@string/_4mins"
        android:visibility="invisible" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="15dp"
        android:onClick="fastClickHandler"
        android:tag="5m"
        android:text="@string/_5mins"
        android:visibility="invisible" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button01"
        android:layout_alignBottom="@+id/Button01"
        android:layout_alignLeft="@+id/button3"
        android:onClick="fastClickHandler"
        android:tag="6m"
        android:text="@string/_6mins"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button02"
        android:layout_alignBottom="@+id/Button02"
        android:layout_alignLeft="@+id/button2"
        android:onClick="fastClickHandler"
        android:tag="7m"
        android:text="@string/_7mins"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_customTime"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:onClick="fastClickHandler"
        android:tag="1m"
        android:text="@string/_1min"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editText_customTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button01"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/custom_time"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView_curDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button02"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="85dp"
        android:text="2014-08-20 09:56:33"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_curDateTime"
        android:layout_alignLeft="@+id/editText_customTime"
        android:text="@string/cur_time"
        android:visibility="invisible" />

</RelativeLayout>